--- a/public/css/document.css
+++ b/public/css/document.css
@@ -1,25 +1,21 @@
-main{
+#document{
+    margin: 0 auto;
     background-color: #ede4ff;
-    height: 650px;
-    display: flex;
-    flex-direction: column;
+    padding: 20px 0;
 }
 
-main h1{
-    font-family: 'Trebuchet MS';
-    font-weight: bold !important;
-    font-size:30px;
-    margin: 0 0 30px ;
+#intro h1{
     text-align: center;
-    color: #3B295D;;
+    color: #3B295D;
+    font-size: 30px;
 }
 
 #intro{
     margin: 0 auto;
-    max-width: 400px;
+    text-align: center;
+    max-width: 80%;
     border: 1px solid #3b295d37;
     padding: 30px 10px;
-    margin-top: 20px;
     border-radius: 5px;
 }
 
@@ -37,37 +33,10 @@ main h1{
     padding: 20px 0;
 }
 
-input[type="text"]{
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-}
-
-input[type="text"]:hover{
-    border-color: #A2CDC4;
-    outline: none;
-}
-
-input[type="text"]:focus{
-    border-color: #A2CDC4;
-    outline: none;
-}
-
-p{
-    text-align: justify;
-}
-
 #firmas{
     margin: 20px 10% 20px;
 }
 
-h2{
-    font-size: 20px;
-    text-align: center;
-    color: #3B295D;;
-}
 footer p{
     text-align: center;
 }
