--- a/public/css/index.css
+++ b/public/css/index.css
@@ -56,11 +56,6 @@
     display: flex;
 }
 
-@media screen and (max-width: 990px) {
-    #products section{
-        flex-direction: column;
-    }
-}
 
 #products h2{
     color: white;
@@ -154,11 +149,22 @@
 /* MISION-VISION */
 
 #mision-vision{
-  
+    background-color: #3B295D;
+    display: flex;
+    color: white;
+    padding:0px 5%;
 }
 
 #mision-vision h2{
-    
+    margin-right: 20px;
+    font-size: 60px;
+    padding: 20px;
+}
+
+#mision-vision article{
+    padding: 40px;
+    border-left: 20px solid #ede4ff;
+    text-align: justify;
 }
 
 
@@ -209,5 +215,17 @@
 .input:focus {
     border-color: #A2CDC4; /* Change border color on hover/focus */
     outline: none; /* Remove outline */
+}
+
+@media screen and (max-width: 990px) {
+    #products section{
+        flex-direction: column;
+    }
+
+    #mision-vision{
+        flex-direction: column;
+        height: auto;
+    }
+
 }
 
